all but 1 issue fixed

--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
   <body>
     <!-- First section w/ logo and nav links -->
     <header>
-      <section>
+      <section id="#home">
         <div class="nav-container">
+          <a href="#home">
           <img
             id="logo"
             src="./resources/images/img-tea-cozy-logo.webp"
             alt="tea cozy logo"
           />
+          </a>
           <ul class="nav-bar">
-            <li>Mission</li>
-            <li>Featured Tea</li>
-            <li>Locations</li>
+            <li><a href="#mission">Mission</a></li>
+            <li><a href="#ft">Featured Tea</a></li>
+            <li><a href="#loca">Locations</a></li>
           </ul>
         </div>
       </section>
     </header>
 
     <!-- Page Hero -->
-    <section>
+    <section id="mission">
         <div class="hero-wrapper">
          <div class="hero-container">
           <div class="text-box1">
@@ -43,8 +45,8 @@
     </section>
 
     <!-- Tea of the Month area -->
-    <section>
-      <div class="text-box2">
+    <section >
+      <div id="ft" class="text-box2">
         <h2>Tea of the Month</h2>
         <h4>Whats Steeping at The Tea Cozy?</h4>
       </div>
@@ -95,11 +97,11 @@
       </div>
     </section>
     <!-- Locations area -->
-    <section>
+    <section id="loca">
         <div class="location-wrapper">
           <div class="location-container">
         <!-- <span><div class="location-title"><h2>Locations</h2></div></span> Couldnt figure out how to align the h2 element on top of the elements below 🙁  -->
-            <div class="text-box3">
+            <div class="text-box3 first">
               <h3>Downtown</h3>
                 <p>384 West 4th St <br><br>Suite 108 <br><br>Portland, Maine </p>
             </div>
@@ -107,7 +109,7 @@
               <h3>East Bayside</h3>
                 <p>3433 Phisherman's Avenue<br><br>(Northwest Corner)<br><br>Portland, Maine</p>
             </div>
-            <div class="text-box3">
+            <div class="text-box3 third">
               <h3>Oakdale</h3>
                 <p>515 Crescent Avenue<br><br>Second Floor<br><br>Portland, Maine</p>
             </div>
